Updated LQIP placeholders so there’s a wrapper around the blurred image which prevents the blur from bleeding.

--- a/src/scss/components/_figure.scss
+++ b/src/scss/components/_figure.scss
@@ -9,6 +9,7 @@ figure {
 
   img {
     margin-bottom: $gutter / 4;
+    vertical-align: top;
   }
 
   figcaption {
